[package]
name = "gsw"
version = "0.2.2"
authors = [
  "Guilherme Castelão <guilherme@castelao.net>",
  "Luiz Irber <luiz.irber@gmail.com>"
  ]
edition = "2021"
description = "TEOS-10 v3.06.12 Gibbs Seawater Oceanographic Toolbox in Rust"
documentation = "https://docs.rs/gsw"
license = "BSD-3-Clause"
repository = "https://github.com/castelao/GSW-rs"
keywords = ["oceanography", "seawater"]
categories = ["science", "no-std"]
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["convert_refdata"]

[dependencies]
libm = "0.2.9"
libc = { version = "0.2", optional = true }
thiserror = { version = "1.0.65", optional = true }
num-complex = "0.4.3"

[dev-dependencies]
heapless = "0.7.17"
inline-c = "0.1"
postcard = "1.1.3"
serde = "1.0.219"
criterion = "0.5.1"

[build-dependencies]
cbindgen = { version = "0.29.0", optional = true }

[features]
default = []
capi = ["libc", "std"]
# Compatibility with Matlab implementation
compat = ["invalidasnan"]
# Invalid value returns Ok(f64:NAN) instead of an Error
invalidasnan = []
# Depth-independent gravitational acceleration. Useful for numerical models
# Maybe rename to constg?
nodgdz = []
std = ["thiserror"]

[lib]
name = "gsw"
bench = false

[profile.dev]
# Avoid setting this because it requires any binary/lib linking to gsw-rs
# to also use panic = "abort"
# https://twitter.com/alilleybrinker/status/1391129543071526914
#panic = "abort"

[package.metadata.capi]
# Configures the minimum required cargo-c version. Trying to run with an
# older version causes an error.
min_version = "0.10.11"

[package.metadata.capi.header]
# Used as header file name. By default this is equal to the crate name.
# The name can be with or without the header filename extension `.h`
name = "gswteos-10.h"
# Install the header into a subdirectory with the name of the crate. This
# is enabled by default
subdirectory = false
# Generate the header file with `cbindgen`, or copy a pre-generated header
# from the `assets` subdirectory. By default a header is generated.
generation = false
# Can be use to disable header generation completely.
# This can be used when generating dynamic modules instead of an actual library.
enabled = true

[[bench]]
name = "volume"
harness = false
